# lcd-agent

./: .env  .gitignore  Cargo.toml  build.sh
res/: collect.sh  deploy-service.sh  deploy.sh  gpu.sh  lcd-agent.service  omni-gpu-agent.tgz  prover.sh  start.sh  stop.sh  zk-ins.sh
res/machine/: collect.sh  zk-ins.sh  zk-update.sh
res/omni-gpu-agent/: deploy-service.sh  omni-gpu-agent.service  prover.sh
res/release/: lcd-agent
src/: collector.rs  error.rs  main.rs  sh.rs  tasks.rs  ws.rs
